# learning

./: CMakeLists.txt  Jenkinsfile  License.txt  README.md  build.sh  configure.sh  install.sh  main.cpp  run.sh
01-ImageReaderImageWriter/: 114-ImageReaderImageWriter.cpp
01-StandardExceptions/: StandardExceptions.cpp
01-Variables/: Variables.cpp
02-ImageProcessingLibrary/: ImageProcessing.cpp
02-Strings/: Strings.cpp
03-Binarization/: ImageProcessing.h
03-Input/: Input.cpp
05-ReadingTextFiles/: ReadingTextFiles.cpp
06-HistogramEqualization/: ImageProcessing.h  eq_image_hist.txt
06-ParsingTextInFiles/: ParsingTextInFiles.cpp  stats.txt
07-SDLBasic/: SDLBasic.cpp
08-BinaryFiles/: BinaryFiles.cpp
08-NegativeImage/: main.cpp
08-SDLWindow/: SDLWindow.cpp
09-Blur-NãoIntegrado/: 122-BlurDoZero.cpp
09-EnablingPixelAccess/: EnablingPixelAccess.cpp
11-ScreenObject/: ScreenObject.cpp
12-LineDetector/: ImageProcessing.cpp
12-Lists/: Lists.cpp
13-AnimatingColors/: Screen.h
13-PrewittDetection/: ImageProcessing.h
14-CreatingParticles/: CreatingParticles.cpp  Particle.h  Screen.cpp  Swarm.cpp  Swarm.h
14-CustomObjectsMapValues/: CustomObjectsMapValues.cpp
14-SobelDetection/: ImageProcessing.h  main.cpp
15-AnimatingParticles/: AnimatingParticles.cpp  Particle.cpp  Particle.h  Swarm.h
15-RobinsonDetection/: ImageProcessing.h
16-RobertsDetection/: main.cpp
16-SimulatingExplosions/: Particle.cpp
17-ConstantSpeed/: Swarm.h
18-BlurringScreen/: Particle.cpp  Particle.h  (+1 more)
arm-teste/: CMakeLists.txt  configure.sh  olasconfig.h.in
(+225 files in other folders)
